Changes to KD file

--- a/PyTorch/Knowledge Distillation/cifar10_pytorch_KD.ipynb
+++ b/PyTorch/Knowledge Distillation/cifar10_pytorch_KD.ipynb
@@ -3,19 +3,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "iLUxsGCbBpHr"
-      },
-      "source": [
-        "# Hw 1-2"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "17valEp9E5Tg"
       },
       "source": [
-        "# Import libraries"
+        "# Import Libraries"
       ]
     },
     {
@@ -45,7 +36,7 @@
         "id": "uNsNNFR6E9DS"
       },
       "source": [
-        "# Use Colab env"
+        "# Set Up Colab Environment"
       ]
     },
     {
@@ -68,7 +59,6 @@
         }
       ],
       "source": [
-        "# Use google colab environments\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ]
@@ -107,7 +97,7 @@
         "id": "bZ9asntzFBBq"
       },
       "source": [
-        "# Load dataset"
+        "# Load Dataset"
       ]
     },
     {
@@ -344,7 +334,7 @@
         "id": "vUXtObjkHgNO"
       },
       "source": [
-        "# Check structure of the model"
+        "# Check Model Structure"
       ]
     },
     {
@@ -402,7 +392,7 @@
         "id": "CKnobc5bI3l6"
       },
       "source": [
-        "# Train the model"
+        "# Train Model"
       ]
     },
     {
@@ -553,7 +543,7 @@
         "id": "cLaiAXgzJAuF"
       },
       "source": [
-        "# Test the model"
+        "# Test Model"
       ]
     },
     {
@@ -1023,7 +1013,7 @@
         "id": "vfgbnk2TsaRJ"
       },
       "source": [
-        "# Sample image plot"
+        "# Sample Image Plot"
       ]
     },
     {
